// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBox default visible: false, children: 1 1`] = `
.c0 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 9999;
}

<div
  className="c0"
>
  <span>
    a
  </span>
</div>
`;

exports[`ContentBox default visible: true, children: 1 1`] = `
.c0 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 9999;
}

<div
  className="c0"
>
  <span>
    a
  </span>
</div>
`;

exports[`ContentBox default visible: true, children: 2 1`] = `
.c0 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 9999;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <span>
      a
    </span>
    <span>
      b
    </span>
  </div>
</div>
`;

exports[`ContentBox default visible:false, children: 2 1`] = `
.c0 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 9999;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <span>
      a
    </span>
    <span>
      b
    </span>
  </div>
</div>
`;
